# 3words

./: .gitignore  Pipfile  main.py  pyproject.toml  script.py  three_words.ipynb  words.txt
