[tool.poetry]
name = "three-words"
version = "0.1.0"
description = ""
authors = ["Allan Olweny <allan.olweny@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
wordcloud = "^1.9.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
